# bench

./: .gitmodules  CMakeLists.txt  INFO  README.md  README.rst  asm_filter.cpp  bench_cli.js  construct.cpp  dump.cpp  filter.cpp  find.h  find_backtracking_bfs.h  find_backtracking_dfs.h  find_suffix.h  io_dump.cpp  iterator_factors.h  minimizer.cpp  misc.h  options.h  pa_global.cpp  package.js  package.json  qgrams_construct.cpp  qgrams_find.cpp  query.cpp  run.h  stree_construct.cpp  stree_find.cpp  stree_visit.cpp  types.h  verifier.h  visit.cpp
bench_app/: README.md  README.rst  bench_cli.js  package.js  package.json
bench_app/benchmarks_src/: CMakeLists.txt
bench_app/benchmarks_src/indices/: index_exact_search_sa.cpp  index_exact_search_wotd.cpp  index_one_error_search.cpp
bench_app/benchmarks_src/kmers/: kmers_10mer_counting_example.cpp  kmers_kmer_counting_base.h
bench_app/benchmarks_src/pairwise_alignments/: pairwise_alignment_local_linear_dna.cpp
bench_app/config/: config.json
bench_app/data/: genome.index.fewer.reads.length.50.fa
bench_app/validators_src/: index_exact_search.validate.txt  pairwise_alignment_validator.py
benchmarks_src/indices/: index_exact_search_base.h  index_exact_search_fm.cpp  index_exact_search_qgram.cpp  (+2 more)
data/: genome.fa  genome.pairwise_alignment.reads.length.100.fa
integrated_interface/: CMakeLists.txt  README.rst  bench_cli.js  gui.js  index.html  install.py  pack.py  package.js  package.json
integrated_interface/Info/HelpInfo/: helpinfo.json
integrated_interface/Info/configInfo/: .readMappingInfo.html (xp的MacBook Pro 的冲突副本 2015-10-22).swp  pw_global_dna_1M_help.json  pw_global_dna_1M_protein_help.json  pw_local_dna_1M_help.json  pw_local_dna_1M_protein_help.json
integrated_interface/benchmarks_src/: CMakeLists.txt
integrated_interface/benchmarks_src/indices/: index_create.cpp  index_exact_search_dfi.cpp  index_exact_search_esa.cpp
integrated_interface/benchmarks_src/kmers/: kmers_kmer_counting_base.h
integrated_interface/benchmarks_src/multiple_alignments/: multiple_alignment_base.h
integrated_interface/benchmarks_src/pairwise_alignments/: pairwise_alignment_base.h
integrated_interface/config/: 1.json~  3.json~  app_config.json  config (copy).json~  config.json  config.json~  gconfig.json  gconfig.json~
integrated_interface/data/: chr1_gl000192.inx.txt  chr1_sim_reads_5000.fa  genome.index.reads.length.50.fa
integrated_interface/data/validations/: index_one_error_approximate_search.validate.txt  index_three_errors_approximate_search.validate.txt  index_two_errors_approximate_search.validate.txt  kmers_10mer_counting.validate.txt  kmers_15mer_counting.validate.txt  kmers_50mer_counting.validate.txt  pairwise_alignment_global_affine_dna.validate.txt  pairwise_alignment_global_affine_protein.validate.txt  pairwise_alignment_global_linear_dna.validate.txt  pairwise_alignment_global_linear_protein.validate.txt  pairwise_alignment_local_affine_protein.validate.txt
integrated_interface/resources/: index.html
integrated_interface/resources/config/: app_config.json  descriptions.json
integrated_interface/resources/css/: main.css
integrated_interface/resources/help/app/: helpinfo.json
integrated_interface/resources/js/: .controller.js.swp  benchmark_executor.js  configure.js  controller.js  data_download.js  exporter.js  gui.js  index.html  main.js  nprogress.js  progressbar.js  project.js  system_project.js
integrated_interface/resources/modules/: benchmark_executor.js  configure.js  exporter.js  validator_executor.js  website_generator.js
integrated_interface/resources/templates/benchmarks/: tabbox.html  tabbox_panel_content.html
integrated_interface/resources/templates/data_download/: modal.html
integrated_interface/resources/templates/gui/: main_panels.html  titlebar.html
integrated_interface/resources/templates/project/: informations.html
integrated_interface/resources/templates/results/: result_aborted.html  result_failure.html  result_start_run.html  result_success.html  result_summary.html
integrated_interface/resources/templates/system/: informations.html
integrated_interface/resources/templates/widgets/: stdout_modal.html
integrated_interface/src/: CMakeLists.txt  controller.js
integrated_interface/src/Info/HelpInfo/: helpinfo.json
integrated_interface/src/Info/configInfo/: pw_global_dna_1M_protein_help.json  pw_local_dna_1M_help.json
integrated_interface/src/config/: config.json
integrated_interface/src/std_bench/: reads3.1.fa
integrated_interface/std_bench/: pa_global.cpp
integrated_interface/std_bench/data/: chr1_gl000192.inx.bwt  uniprot_1000.fa  uniprot_800.fa
integrated_interface/std_bench/src/: index_approximate.cpp  index_create.cpp  index_search.cpp  pa_global.cpp  pa_global_protein.cpp  pa_local.cpp  pa_local_protein.cpp
integrated_interface/std_bench/src/indices/: index_approximate_search_base.h  index_create.cpp  index_one_error_approximate_search_esa.cpp  index_three_errors_approximate_search_esa.cpp
integrated_interface/std_bench/src/kmers/: kmers_15mer_counting.cpp  kmers_50mer_counting.cpp
integrated_interface/std_bench/src/pairwise_alignments/: pairwise_alignment_global_affine_protein.cpp  pairwise_alignment_global_linear_dna.cpp  pairwise_alignment_local_affine_protein.cpp  pairwise_alignment_local_linear_dna.cpp
integrated_interface/std_bench/validators/: index_search_hamming_distance_validator.py  kmer_counting.result.txt
integrated_interface/std_bench/website_generator/: website_generate.py
integrated_interface/std_bench/website_generator/template/: benchmark.html
integrated_interface/std_bench/website_generator/template/css/: bootstrap.css  custom.css
integrated_interface/std_bench/website_generator/template/js/: custom.js  dynamic_content.js
integrated_interface/validators_src/: pairwise_alignment.result.txt
integrated_interface/website_generator/: descriptions.json  website_generate.py
scripts/tex/: tex.R  (+3 more)
tex/: single.R
validators_src/: CMakeLists.txt  index_exact_search.result.txt  kmer_counting_validator.py  setup.py
(+71 files in other folders)
